--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@ body{
   color: navy;
   font-size: 40px;
   position: absolute;
-  top: 15%;
-  left: 44%;
+  top: 10%;
+  left: 65%;
   
   text-shadow:1px 1px 6px rgb(172, 61, 20);
 }
@@ -31,10 +31,10 @@ body{
   text-align: center;
   text-shadow:1px 1px 8px royalblue;
   line-height: 100px;
-  background-color: rgb(201, 97, 133);
+  background-color: rgb(250,200,150);
   position: absolute;
-  top: 50%;
-  left: 50%;
+  top: 45%;
+  left: 70%;
   transform: translate(-50%,-50%);
   border-radius: 20% 2%;
 }
